# oscm-demo-1

./: .gitignore  README.md  pyproject.toml  run.py
app/: agents.py  config.py  csv_parser.py  db.py  engine.py  main.py  models.py  state_store.py
data/: sample_demand.csv  simulation.db
static/: app.js  index.html  style.css
